Fix single argument URL constructor calls